[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nextsec"
version = "0.0.1"
authors = [
  { name="Giacomo Sanchietti", email="giacomo.sancheitti@nethesis.it" },
]
description = "Utilities for Nextsecurity development"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "icense v3 (LGPLv3)   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [ "pyuci" ]

[project.urls]
"Homepage" = "https://github.com/NethServer/python3-nextsec"
"Bug Tracker" = "https://github.com/NethServer/python3-nextsec/issues"
